fixed left menu scroll on mobile. closes #47

--- a/public/bootstrap/less/menu.less
+++ b/public/bootstrap/less/menu.less
@@ -276,7 +276,7 @@
     max-width: 106%;
   }
 
-  body.hover &.nano.pushed {
+  &.nano.pushed {
     top: 180px;
     .transition(400ms);
   }
@@ -359,7 +359,6 @@
   }
 
   @media @mobile {
-    position: static;
     // top: 110px;
     .menu-list__item {
       .menu-list__header {
